[package]
name = "rust_tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23.2"
futures = "0.3"
pnet = "0.35.0"
trust-dns-proto = "0.23.2"
structopt = "0.3.26"
lapin = "2.4.0"
